# ipcan-pat-daat

./: CMakeLists.txt  ipcan-time  main.cpp  path.cfg  run.sh  run_cachegrind.sh  test-server
cpp/: ActiveNodeIpcan.cpp  Experiment.cpp  Framework.cpp  Trie.cpp  utils.cpp
header/: ActiveNodeIpcan.h  Directives.h  Experiment.h  Framework.h  ShortVector.h  StaticString.h  Trie.h  TrieNode.h  utils.h
